# chat-camp

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/chat-camp-backend/: Cargo.toml  chat-camp-backend.did
src/chat-camp-backend/src/: chat.rs  lib.rs  random.rs  user.rs
src/chat-camp-frontend/: index.html  package.json
src/chat-camp-frontend/src/: App.vue  index.scss  main.js
src/chat-camp-frontend/src/components/: Header.vue  Messages.vue  RegisterPage.vue  UserList.vue
src/chat-camp-frontend/src/stores/: loginData.ts  recipientData.ts
