[package]
name = "chat-camp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
getrandom = { version = "0.2.15", features = ["custom"] }
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
oorandom = "11.1.4"
serde = "1.0.204"
uuid = { version = "1.10.0", features = ["std", "v4"] }
